assignment1/src/main/d96/parser/test/antlr_test/D96Parser.py
# Generated from D96.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'..'", "<INVALID>", "'Break'", 
                     "'Continue'", "'If'", "'Elseif'", "'Else'", "'Foreach'", 
                     "'True'", "'False'", "'Array'", "'In'", "'Int'", "'Float'", 
                     "'Boolean'", "'String'", "'Return'", "'Null'", "'Class'", 
                     "'Val'", "'Var'", "'Constructor'", "'Destructor'", 
                     "'New'", "'By'", "'Self'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'==.'", "'+.'", "'.'", 
                     "'::'", "'('", "')'", "'['", "']'", "'{'", "'}'", "','", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "COMMENT", 
                      "BREAK", "CONTINUE", "IF", "ELSEIF", "ELSE", "FOREACH", 
                      "TRUE", "FALSE", "ARRAY", "IN", "INT", "FLOAT", "BOOLEAN", 
                      "STR", "RETURN", "NULL", "CLASS", "VAL", "VAR", "CONSTRUCTOR", 
                      "DESTRUCTOR", "NEW", "BY", "SELF", "ADD", "SUB", "MUL", 
                      "DIV", "MOD", "NOT", "AND", "OR", "EQUAL", "ASSIGN", 
                      "NOT_EQUAL", "LT", "LTE", "GT", "GTE", "COMP_ESTR", 
                      "CONCAT_STR", "INST_ATT_ACCESS", "STAT_ATT_ACCESS", 
                      "LP", "RP", "LSB", "RSB", "LCB", "RCB", "COMMA", "SEMI", 
                      "INT_LIT", "DEC", "OCT", "HEX", "BIN", "FLOAT_LIT", 
                      "BOOL_LIT", "STRING_LIT", "ID", "STATIC_ID", "WS", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_array_type = 1
    RULE_typ = 2
    RULE_class_declare = 3
    RULE_mem_list = 4
    RULE_mem = 5
    RULE_attr_declare = 6
    RULE_attr_notarray = 7
    RULE_attr_array = 8
    RULE_id_list = 9
    RULE_expr_list = 10
    RULE_array_lst = 11
    RULE_method_declare = 12
    RULE_general_method = 13
    RULE_param_list = 14
    RULE_param = 15
    RULE_param_id_lst = 16
    RULE_constructor_method = 17
    RULE_destructor_method = 18
    RULE_expr_1 = 19
    RULE_expr_2 = 20
    RULE_expr_3 = 21
    RULE_expr_4 = 22
    RULE_expr_5 = 23
    RULE_expr_6 = 24
    RULE_expr_7 = 25
    RULE_expr_8 = 26
    RULE_expr_9 = 27
    RULE_expr_10 = 28
    RULE_expr_11 = 29
    RULE_op_string = 30
    RULE_op_relational = 31
    RULE_op_logical = 32
    RULE_op_adding = 33
    RULE_op_multiplying = 34
    RULE_op_index = 35
    RULE_op_new = 36
    RULE_operand = 37
    RULE_literal = 38
    RULE_func_call = 39
    RULE_instant_method = 40
    RULE_static_method = 41
    RULE_stmt_list = 42
    RULE_stmt = 43
    RULE_stmt_decl = 44
    RULE_stmt_delc_noarray = 45
    RULE_stmt_delc_array = 46
    RULE_id_list_stmt = 47
    RULE_stmt_assign = 48
    RULE_lhs = 49
    RULE_stmt_if = 50
    RULE_elif_stmt_list = 51
    RULE_elif_stmt = 52
    RULE_else_stmt = 53
    RULE_stmt_forin = 54
    RULE_stmt_break = 55
    RULE_stmt_continue = 56
    RULE_stmt_return = 57
    RULE_stmt_method_invo = 58
    RULE_array = 59
    RULE_idx_array = 60
    RULE_nd_array = 61
    RULE_array_list = 62

    ruleNames =  [ "program", "array_type", "typ", "class_declare", "mem_list", 
                   "mem", "attr_declare", "attr_notarray", "attr_array", 
                   "id_list", "expr_list", "array_lst", "method_declare", 
                   "general_method", "param_list", "param", "param_id_lst", 
                   "constructor_method", "destructor_method", "expr_1", 
                   "expr_2", "expr_3", "expr_4", "expr_5", "expr_6", "expr_7", 
                   "expr_8", "expr_9", "expr_10", "expr_11", "op_string", 
                   "op_relational", "op_logical", "op_adding", "op_multiplying", 
                   "op_index", "op_new", "operand", "literal", "func_call", 
                   "instant_method", "static_method", "stmt_list", "stmt", 
                   "stmt_decl", "stmt_delc_noarray", "stmt_delc_array", 
                   "id_list_stmt", "stmt_assign", "lhs", "stmt_if", "elif_stmt_list", 
                   "elif_stmt", "else_stmt", "stmt_forin", "stmt_break", 
                   "stmt_continue", "stmt_return", "stmt_method_invo", "array", 
                   "idx_array", "nd_array", "array_list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    COMMENT=3
    BREAK=4
    CONTINUE=5
    IF=6
    ELSEIF=7
    ELSE=8
    FOREACH=9
    TRUE=10
    FALSE=11
    ARRAY=12
    IN=13
    INT=14
    FLOAT=15
    BOOLEAN=16
    STR=17
    RETURN=18
    NULL=19
    CLASS=20
    VAL=21
    VAR=22
    CONSTRUCTOR=23
    DESTRUCTOR=24
    NEW=25
    BY=26
    SELF=27
    ADD=28
    SUB=29
    MUL=30
    DIV=31
    MOD=32
    NOT=33
    AND=34
    OR=35
    EQUAL=36
    ASSIGN=37
    NOT_EQUAL=38
    LT=39
    LTE=40
    GT=41
    GTE=42
    COMP_ESTR=43
    CONCAT_STR=44
    INST_ATT_ACCESS=45
    STAT_ATT_ACCESS=46
    LP=47
    RP=48
    LSB=49
    RSB=50
    LCB=51
    RCB=52
    COMMA=53
    SEMI=54
    INT_LIT=55
    DEC=56
    OCT=57
    HEX=58
    BIN=59
    FLOAT_LIT=60
    BOOL_LIT=61
    STRING_LIT=62
    ID=63
    STATIC_ID=64
    WS=65
    ERROR_CHAR=66
    UNCLOSE_STRING=67
    ILLEGAL_ESCAPE=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def class_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_declareContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_declareContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 126
                self.class_declare()
                self.state = 129 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 131
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(D96Parser.ARRAY, 0)

        def LSB(self):
            return self.getToken(D96Parser.LSB, 0)

        def COMMA(self):
            return self.getToken(D96Parser.COMMA, 0)

        def INT_LIT(self):
            return self.getToken(D96Parser.INT_LIT, 0)

        def RSB(self):
            return self.getToken(D96Parser.RSB, 0)

        def typ(self):
            return self.getTypedRuleContext(D96Parser.TypContext,0)


        def array_type(self):
            return self.getTypedRuleContext(D96Parser.Array_typeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_array_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_type" ):
                listener.enterArray_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_type" ):
                listener.exitArray_type(self)




    def array_type(self):

        localctx = D96Parser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(D96Parser.ARRAY)
            self.state = 134
            self.match(D96Parser.LSB)
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.INT, D96Parser.FLOAT, D96Parser.BOOLEAN, D96Parser.STR]:
                self.state = 135
                self.typ()
                pass
            elif token in [D96Parser.ARRAY]:
                self.state = 136
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 139
            self.match(D96Parser.COMMA)
            self.state = 140
            self.match(D96Parser.INT_LIT)
            self.state = 141
            self.match(D96Parser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(D96Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(D96Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(D96Parser.BOOLEAN, 0)

        def STR(self):
            return self.getToken(D96Parser.STR, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_typ

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTyp" ):
                listener.enterTyp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTyp" ):
                listener.exitTyp(self)




    def typ(self):

        localctx = D96Parser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typ)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.INT) | (1 << D96Parser.FLOAT) | (1 << D96Parser.BOOLEAN) | (1 << D96Parser.STR))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LCB(self):
            return self.getToken(D96Parser.LCB, 0)

        def RCB(self):
            return self.getToken(D96Parser.RCB, 0)

        def mem_list(self):
            return self.getTypedRuleContext(D96Parser.Mem_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_declare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_declare" ):
                listener.enterClass_declare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_declare" ):
                listener.exitClass_declare(self)




    def class_declare(self):

        localctx = D96Parser.Class_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(D96Parser.CLASS)
            self.state = 146
            self.match(D96Parser.ID)
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.T__0]:
                self.state = 147
                self.match(D96Parser.T__0)
                self.state = 148
                self.match(D96Parser.ID)
                pass
            elif token in [D96Parser.LCB]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 152
            self.match(D96Parser.LCB)
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR, D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.STATIC_ID]:
                self.state = 153
                self.mem_list()
                pass
            elif token in [D96Parser.RCB]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 157
            self.match(D96Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mem_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mem(self):
            return self.getTypedRuleContext(D96Parser.MemContext,0)


        def mem_list(self):
            return self.getTypedRuleContext(D96Parser.Mem_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_mem_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMem_list" ):
                listener.enterMem_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMem_list" ):
                listener.exitMem_list(self)




    def mem_list(self):

        localctx = D96Parser.Mem_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mem_list)
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.mem()
                self.state = 160
                self.mem_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.mem()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr_declare(self):
            return self.getTypedRuleContext(D96Parser.Attr_declareContext,0)


        def method_declare(self):
            return self.getTypedRuleContext(D96Parser.Method_declareContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_mem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMem" ):
                listener.enterMem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMem" ):
                listener.exitMem(self)




    def mem(self):

        localctx = D96Parser.MemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mem)
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.attr_declare()
                pass
            elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.STATIC_ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.method_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr_notarray(self):
            return self.getTypedRuleContext(D96Parser.Attr_notarrayContext,0)


        def attr_array(self):
            return self.getTypedRuleContext(D96Parser.Attr_arrayContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attr_declare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_declare" ):
                listener.enterAttr_declare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_declare" ):
                listener.exitAttr_declare(self)




    def attr_declare(self):

        localctx = D96Parser.Attr_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attr_declare)
        try:
            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.attr_notarray()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.attr_array()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_notarrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(D96Parser.Id_listContext,0)


        def typ(self):
            return self.getTypedRuleContext(D96Parser.TypContext,0)


        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def expr_list(self):
            return self.getTypedRuleContext(D96Parser.Expr_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attr_notarray

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_notarray" ):
                listener.enterAttr_notarray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_notarray" ):
                listener.exitAttr_notarray(self)




    def attr_notarray(self):

        localctx = D96Parser.Attr_notarrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attr_notarray)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 174
            self.id_list()
            self.state = 175
            self.match(D96Parser.T__0)
            self.state = 176
            self.typ()
            self.state = 182
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.SEMI]:
                self.state = 177
                self.match(D96Parser.SEMI)
                pass
            elif token in [D96Parser.ASSIGN]:
                self.state = 178
                self.match(D96Parser.ASSIGN)
                self.state = 179
                self.expr_list()
                self.state = 180
                self.match(D96Parser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_arrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(D96Parser.Id_listContext,0)


        def array_type(self):
            return self.getTypedRuleContext(D96Parser.Array_typeContext,0)


        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def array_lst(self):
            return self.getTypedRuleContext(D96Parser.Array_lstContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attr_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_array" ):
                listener.enterAttr_array(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_array" ):
                listener.exitAttr_array(self)




    def attr_array(self):

        localctx = D96Parser.Attr_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attr_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 185
            self.id_list()
            self.state = 186
            self.match(D96Parser.T__0)
            self.state = 187
            self.array_type()
            self.state = 193
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.SEMI]:
                self.state = 188
                self.match(D96Parser.SEMI)
                pass
            elif token in [D96Parser.ASSIGN]:
                self.state = 189
                self.match(D96Parser.ASSIGN)
                self.state = 190
                self.array_lst()
                self.state = 191
                self.match(D96Parser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(D96Parser.COMMA, 0)

        def id_list(self):
            return self.getTypedRuleContext(D96Parser.Id_listContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def STATIC_ID(self):
            return self.getToken(D96Parser.STATIC_ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_id_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_list" ):
                listener.enterId_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_list" ):
                listener.exitId_list(self)




    def id_list(self):

        localctx = D96Parser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_id_list)
        self._la = 0 # Token type
        try:
            self.state = 199
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 195
                _la = self._input.LA(1)
                if not(_la==D96Parser.ID or _la==D96Parser.STATIC_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 196
                self.match(D96Parser.COMMA)
                self.state = 197
                self.id_list()
                pass
